# pretix-checkin-alert

./: .update-locales.sh  MANIFEST.in  Makefile  README.md  README.rst  pretixplugin.toml  pyproject.toml  setup.cfg
.github/workflows/: style.yml  tests.yml
pretix_checkin_alert/: __init__.py  apps.py  signals.py  urls.py  views.py
pretix_checkin_alert/locale/de/LC_MESSAGES/: django.po
pretix_checkin_alert/static/pretix_checkin_alert/: checkin-alert.css  checkin-alert.js
pretix_checkin_alert/templates/pretix_checkin_alert/: settings.html
